securitygroups.tf
resource "aws_security_group" "ec2_sg" {
  name        = var.sg_name
  description = "Allow SSH and HTTP inbound traffics"
  vpc_id      = "vpc-037cc5b1e4906e2de" #vpc-0c93d8659c29c4e57

  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ssh_http"
  }
}
